# bot

./: Cargo.toml  README.md  help.md  index.md
src/: main.rs
src/commands/: commands.rs  economy.rs  mod.rs  music.rs  osu_c.rs  pfp.rs  ping.rs  purge.rs  structs.rs  user.rs  warn.rs
