[package]
name = "bot"
version = "0.1.0"
authors = ["matthew w <sirtomato999@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.8", default-features = true }
enigo = "*"
scrap = "0.5"
repng = "0.2.2"
image = "*"