[package]
name = "bot"
version = "0.1.0"
authors = ["matthew w <sirtomato999@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.9.0-rc.0", features = ["voice"] }
tokio = "0.2.22"
yt-api = "0.2.0"
rosu = "0.3.1"
