[package]
name = "bot"
version = "0.1.0"
authors = ["matthew w <sirtomato999@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.9.0-rc.0", features = ["voice"] }
tokio = "0.2.22"
yt-api = "0.2.0"
unhygienic = "0.1.1"
toml = "0.5.6"
rosu = { git = "https://github.com/MaxOhn/rosu", branch = "master" }
rand = "0.7.3"